--- a/inpix/src/main/res/layout/edit_fragment_edit_image.xml
+++ b/inpix/src/main/res/layout/edit_fragment_edit_image.xml
@@ -12,9 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="@dimen/padding_10"
-        android:paddingTop="@dimen/padding_10">
+        android:orientation="horizontal">
 
 
         <TextView
@@ -24,16 +22,17 @@
 
         <SeekBar
             android:id="@+id/seekbar_brightness"
+            style="@style/Widget.AppCompat.SeekBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:thumbTint="@color/inpix" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingBottom="@dimen/padding_10"
         android:paddingTop="@dimen/padding_10">
 
 
@@ -46,14 +45,14 @@
             android:id="@+id/seekbar_contrast"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:thumbTint="@color/inpix" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingBottom="@dimen/padding_10"
         android:paddingTop="@dimen/padding_10">
 
         <TextView
@@ -65,7 +64,8 @@
             android:id="@+id/seekbar_saturation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:thumbTint="@color/inpix" />
     </LinearLayout>
 
 </LinearLayout>
