--- a/inpix/src/main/res/layout/edit_activity_main.xml
+++ b/inpix/src/main/res/layout/edit_activity_main.xml
@@ -16,8 +16,9 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/white"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+            android:background="@color/inpix"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:titleTextColor="@android:color/background_light" />
 
     </android.support.design.widget.AppBarLayout>
 
