--- a/inpix/src/main/res/layout/edit_content_main.xml
+++ b/inpix/src/main/res/layout/edit_content_main.xml
@@ -29,7 +29,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@android:color/white"
         app:tabGravity="fill"
-        app:tabMode="fixed" />
+        app:tabIndicatorColor="@android:color/holo_red_light"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@android:color/holo_red_light"
+        app:tabTextColor="@android:color/holo_red_light" />
 
 </RelativeLayout>
