--- a/inpix/src/main/res/layout/item_image.xml
+++ b/inpix/src/main/res/layout/item_image.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="250dp"
     android:orientation="horizontal"
-    card_view:cardBackgroundColor="@android:color/holo_red_light"
+    card_view:cardBackgroundColor="@color/inpix"
     card_view:cardCornerRadius="0dp"
     card_view:cardElevation="0dp">
 
