--- a/inpix/src/main/res/layout/presentation.xml
+++ b/inpix/src/main/res/layout/presentation.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/holo_orange_dark">
+        android:background="@color/inpix">
 
         <ImageView
             android:id="@+id/imageView5"
@@ -49,7 +49,7 @@
             android:gravity="center"
             android:text="FELICIDAD"
             android:textAlignment="center"
-            android:textColor="@color/cardview_dark_background"
+            android:textColor="@android:color/background_light"
             android:textSize="30sp"
             android:textStyle="bold" />
 
