--- a/inpix/src/main/res/values/colors.xml
+++ b/inpix/src/main/res/values/colors.xml
@@ -1,15 +1,17 @@
 <resources>
 
-    <color name="black_overlay">#4e000000</color>
+    <color name="black_overlay">#2effffff</color>
     <color name="titles">#5efafafa</color>
     <color name="accent_material_light">#ffffff</color>
     <color name="secondary_text_material_light">#bfffffff</color>
 
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#009688</color>
-    <color name="color_option_menu">#FF3990</color>
-    <color name="filter_label_normal">#8A8889</color>
+    <color name="colorAccent">#00ff4444</color>
+    <color name="color_option_menu">#ff3990</color>
+    <color name="filter_label_normal">#8a8889</color>
     <color name="filter_label_selected">#221F20</color>
+    <color name="transparente">#00000000</color>
 
+    <color name="inpix">#e84e1b</color>
 </resources>
