--- a/inpix/src/main/res/values/styles.xml
+++ b/inpix/src/main/res/values/styles.xml
@@ -174,7 +174,7 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:textColorPrimary">@color/cardview_light_background</item>
         <item name="android:textColorSecondary">@color/secondary_text_material_light</item>
-        <item name="colorPrimary">@android:color/holo_red_light</item>
+        <item name="colorPrimary">@color/inpix</item>
     </style>
 
     <style name="CustomBtn" parent="@style/Widget.Design.FloatingActionButton">
@@ -183,7 +183,7 @@
     </style>
 
     <style name="Widget.Design.FloatingActionButton2" parent="Widget.Design.FloatingActionButton">
-        <item name="android:backgroundTint">@android:color/holo_red_light</item>
+        <item name="android:backgroundTint">@color/inpix</item>
     </style>
 
     <style name="borderlessRound" parent="borderless">
@@ -215,8 +215,29 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
-        <item name="android:actionMenuTextColor">@color/color_option_menu</item>
+        <item name="android:actionMenuTextColor">@color/cardview_light_background</item>
     </style>
 
+    <!-- Menu button actions -->
+    <style name="textMenuAction">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_gravity">center_horizontal|bottom</item>
+        <item name="android:layout_margin">2dp</item>
+        <item name="android:theme">@style/button_textmax</item>
+        <item name="android:background">#bcbcbc</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:enabled">true</item>
+        <item name="android:textColor">#fffffbfb</item>
+        <item name="android:bottomLeftRadius">10dp</item>
+        <item name="android:bottomRightRadius">10dp</item>
+        <item name="android:topLeftRadius">10dp</item>
+        <item name="android:topRightRadius">10dp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:paddingRight">5dp</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingBottom">5dp</item>
+    </style>
 </resources>
 
